Mobile ver. for titles, menu and AR block.
AR block styles needs refactoring.

--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -9,6 +9,7 @@ $lighter-gray-color: #D3CDCA !important;
 $darker-gray-color: #5D5D5D !important;
 $dark-gray-color: #4D4D4D !important;
 $darkish-gray-color: #A3A3A3 !important;
+$transparent-redish-gray-color: #db34242e !important;
 
 $normal-gray-color: #7F7F7F !important;
 $normal-darker-gray-color: #7E7E7E !important;
