--- a/src/features/StreetcodePage/QRBlock/QR.styles.scss
+++ b/src/features/StreetcodePage/QRBlock/QR.styles.scss
@@ -60,3 +60,9 @@ $QRBgImg: "/src/assets/images/qr-block/QRbackground.png";
 .QRBlockTextContainer {
     @include mut.sized(405px, 491px);
 }
+
+@media (max-width: 786px) {
+    .QRBlockContainer{
+        background-image: none;
+    }
+}
