--- a/src/app/layout/header/HeaderDrawer/HeaderDrawer.styles.scss
+++ b/src/app/layout/header/HeaderDrawer/HeaderDrawer.styles.scss
@@ -27,7 +27,7 @@
 .customSlider {
   position: absolute;
   top: f.pxToRem(13px);
-  height: f.pxToRem(380px);
+  max-height: f.pxToRem(378px);
   width: 25%;
 }
 
@@ -59,9 +59,50 @@
     color: c.$dark-red-color;
   }
   @include mut.flexed(column, $align-items: flex-start, $gap: 39px);
-  margin-left: f.pxToRem(50px);
+  margin-left: f.pxToRem(40px);
   * {
     @include mut.with-font(ft.$closer-text-font);
     line-height: f.pxToEm(26px);
   }
+}
+
+@media (max-width: 768px) {
+  .headerDrawerContainer {
+    @include mut.flexed(column, $align-items: flex-start, $gap: 20px);
+    margin-left: f.pxToRem(40px);
+    * {
+      @include mut.with-font(ft.$closer-text-font, $font-size: 16px);
+      line-height: f.pxToEm(22px);
+    }
+  }
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1% 99%;
+    position: absolute;
+    left: 15%;
+    max-height: 100vh;
+  }
+  .socialIconContainer {
+    position: absolute;
+    top: 25rem;
+    @include mut.with-font($font-weight: 300, $font-size: 16px);
+  
+    > * {
+      display: inline;
+      margin-top: pxToRem(40px);
+      margin-right: pxToRem(14.62px);
+      padding-right: 10px;
+    }
+  }
+  .customSlider {
+    top: f.pxToRem(9px);
+    max-height: f.pxToRem(335px);
+  }
+  .ant-drawer-content-wrapper{
+    border-radius: 0 0 0 f.pxToRem(50px);
+  }
+  
+  .ant-drawer-content {
+    border-radius: 0 0 0 f.pxToRem(50px);
+  }  
 }
