--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
@@ -4,16 +4,11 @@
 @use "@assets/sass/mixins/_vendor.mixins.scss" as vnd;
 
 .interestingFactsContainer {
-    @include mut.sized(90%, 848px);
+    @include mut.sized(100%, 848px);
     @include mut.flex-centered($direction: column);
-
-    .blockHeadingContainer {
-        margin-left: pxToRem(10px);
+    .blockHeadingWrapper{
+        padding-left: 12px;
     }
-}
-
-.interestingFactsWrapper {
-    @include wr.main-page-block-wrapper();
 }
 
 .interestingFactsSliderContainer {
