--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -6,7 +6,7 @@
 $moreInfo-width: 150px;
 
 .relatedFiguresWrapper {
-    @include mut.sized($height: 575px); //needs refactoring
+    @include mut.sized($height: 575px); // needs refactoring
     @include wr.main-page-block-wrapper();
     @include mut.rem-margined($bottom: 50px, $top: 170px);
 }
@@ -25,22 +25,19 @@ $moreInfo-width: 150px;
     }
 }
 
-.headingWrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    .blockHeadingContainer {
-        width: 1200px - $moreInfo-width;
-    }
-  }
-
 .relatedFiguresContainer {
     @include mut.sized($width: 90%, $height: 100%);
     @include mut.flexed($direction: column, $align-items: center);
 }
 
+.headingWrapper {
+    position: relative;
+}
+
 .moreInfo {
+    position: absolute;
+    bottom: f.pxToRem(70px);
+    left: f.pxToRem(455px);
     width: $moreInfo-width;
     p {
         @include mut.with-font($font-weight: 500, $font-size: 20px);
