--- a/src/features/StreetcodePage/TickerBlock/Ticker.styles.scss
+++ b/src/features/StreetcodePage/TickerBlock/Ticker.styles.scss
@@ -14,3 +14,10 @@
   @include mut.with-font(ft.$closer-text-font, 400, 20px);
   padding-right: f.pxToRem(10px);
 }
+
+@media screen and (max-width: 480px) {
+  .tickerItem{
+    @include mut.with-font(ft.$closer-text-font, 400, 20px);
+    @include mut.sized(900px, 100%);
+  }
+}
