--- a/src/features/StreetcodePage/TickerBlock/Ticker.styles.scss
+++ b/src/features/StreetcodePage/TickerBlock/Ticker.styles.scss
@@ -5,7 +5,7 @@
 
 .tickerContainer {
   @include mut.colored(c.$pure-white-color, c.$selected-arrow-color);
-  @include mut.sized(200%, 44px);
+  @include mut.sizedImportant(200%, 44px);
   z-index: -1;
 }
 
