--- a/src/features/StreetcodePage/PartnersBlock/PartnerItem/PartnerContent/PartnerContent.styles.scss
+++ b/src/features/StreetcodePage/PartnersBlock/PartnerItem/PartnerContent/PartnerContent.styles.scss
@@ -21,7 +21,7 @@
 }
 
 .partnerContentLogo{
-    @include mut.sized($width: 108px, $height: 30px);
+    @include mut.sized($width: 108px, $height: 100%);
 
     @include mut.flex-centered();
 
