--- a/src/features/AdditionalPages/NotFoundPage/NotFound.styles.scss
+++ b/src/features/AdditionalPages/NotFoundPage/NotFound.styles.scss
@@ -15,11 +15,6 @@
         @include mut.with-font($font-weight: 500, $font-size: 220px);
         color: #891F16;
         line-height: 170px;
-
-        @media (max-width: 1024px){
-            @include mut.with-font($font-weight: 500, $font-size: 165px);
-            line-height: 140px;
-        }
     }
 
     .content{
@@ -28,21 +23,9 @@
         text-align: center;
         color: #1D1F23;
 
-        margin: f.pxToRem(110px) 0 f.pxToRem(40px) 0;
-        
-        @media (max-width: 1024px){
-            @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
-            line-height: 26px;
-            letter-spacing: 0.005em;
-        }
+        margin: f.pxToRem(110px) 0 f.pxToRem(40px) 0;  
     }
 
-    .redirect{
-        @media (max-width: 1024px){
-            max-width: 340px;
-            width: 100%;
-        }     
-    } 
     .redirectToMain{
         @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 20px);
         display: block;
@@ -58,14 +41,30 @@
         
         padding: f.pxToRem(25px) f.pxToRem(26px);
         box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.18);
-        
-        @media (max-width: 1024px){
+    }
+}
+
+@media (max-width: 1024px){
+    .notFoundContainer{
+        .notFoundNumber{
+            @include mut.with-font($font-weight: 500, $font-size: 165px);
+            line-height: 140px;
+        }
+        .content{
+            @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
+            line-height: 26px;
+            letter-spacing: 0.005em;
+        }
+        .redirect{
+            max-width: 340px;
+            width: 100%;  
+        } 
+        .redirectToMain{
             @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 14px);
             line-height: 16px;      
             padding: f.pxToRem(15px) 0;
         }
-    }
+    }  
 }
-
 
 
