--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
@@ -135,3 +135,69 @@
 
       }
 }
+
+@media screen
+    and (min-width: 768px)
+    and (max-width: 1024px){
+
+    
+    .interestingFactsContainer {
+        @include mut.sized(90%, 720px);
+    
+        .single{
+            margin-bottom: pxToRem(120px) ;
+       }
+    }
+    
+    .interestingFactsWrapper {
+        @include wr.main-page-block-wrapper();
+        margin: 0;
+    }
+        // .interestingFactsSliderContainer {
+        //     // @include mut.sized(770px, 410px);
+        // }
+        
+
+        .interestingFactSlide{
+            .slideImage {
+                @include mut.sized($height: 45%);
+                img {
+                    @include mut.sized($width: 100%);
+                }
+            }
+        }
+        .singleSlideContainer{
+            
+            padding-top:7.5%;
+    
+            .interestingFactSlide{
+
+                // @include  mut.sized(400px, 430px);
+                @include  mut.sized(40%);
+                @include mut.full-rounded(20px);
+        
+                .slideImage {
+                    @include mut.sized($height: 40%);
+        
+                    img {
+                        @include mut.sized($width: 100%, $height: 100%);
+                    }
+                }
+                .slideText{
+                    @include mut.sized($height: 10%);
+        
+                    .heading{
+                        font-size:15px;
+                    }
+        
+                    .mainText{
+                        font-size: 12px;
+                        line-height: pxToRem(15px);
+                    }
+                }
+            }
+          
+           
+    
+          }
+    }
