--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
@@ -52,12 +52,12 @@
     }
 
     &.mobile{
-        @include mut.sized($width: 165px, $height: 60px);
-
+        @include mut.sized($width: 165px, $height: 65px);
         background-color: c.$pure-white-color;
 
         .heading {
-            @include mut.sized($width: 100%, $height: 60px);
+            @include mut.sized($width: 100%);
+            max-height: 65px;
         }
 
         p {
