--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -31,7 +31,7 @@ $moreInfo-width: 150px;
     align-items: center;
 
     .blockHeadingContainer {
-        width: 1200px - $moreInfo-width;
+        width: 72vw;
     }
   }
 
@@ -78,13 +78,26 @@ $moreInfo-width: 150px;
 @media screen and (max-width: 480px) {
     .relatedFiguresWrapper {
         @include mut.sized($height: 600px); 
-        @include mut.rem-margined($bottom: 30px, $top: 150px);
+        @include mut.rem-margined($bottom: 100px, $top: 150px);
+
+        .slick-dots {
+            bottom: 0;
+            left: 7px;
+        }
+        .slick-track {
+            @include mut.flexed($align-items: flex-start, $gap: 10px);
+        }
+        .slick-slide {
+            width: 165px !important;
+        }
     }
 }
-
 @media screen and (max-width: 1024px) and (min-width: 481px) {
     .relatedFiguresWrapper {
         @include mut.sized($height: 400px); 
+    }
+    .slick-track {
+        @include mut.rem-margined($left: 13px);
     }
 }
 
@@ -94,9 +107,6 @@ $moreInfo-width: 150px;
 
         .slick-track {
             @include mut.flexed($align-items: flex-start, $gap: 10px);
-        }
-        .slick-list {
-            @include mut.rem-padded($left: 3px);
         }
         .slick-arrow {
             display: none;
