Added minor changes on 768

--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
@@ -7,15 +7,15 @@
 .interestingFactSlide {
   @include mut.sized(387px, 416px);
   @include mut.full-rounded(33px);
-
+  
   z-index: 0;
   cursor: pointer;
   position: relative;
   @include vnd.vendored(transition, '.5s ease');
-
+  
   background-color: c.$pure-white-color;
   box-shadow: 0 2.62461px 2.62461px rgba(0, 0, 0, .25);
-
+  
   .slideImage {
     @include mut.sized(100%, 250px);
     @include mut.rounded(33px, 33px);
@@ -24,19 +24,19 @@
   .slideText {
     @include mut.sized(100%, 167px);
     @include mut.rounded($bottom-right: 33px, $bottom-left: 33px);
-
+    
     .heading {
       @include mut.rem-padded(8px, 20px, 7px, 20px);
       color: c.$accented-red-color;
-
+      
       @include mut.with-font($font-weight: 500, $font-size: 17px);
       line-height: f.pxToEm(20px);
     }
-
+    
     .mainText {
       @include mut.rem-padded(0, 20px, 0px, 20px);
       color: c.$lighter-black-color;
-
+      
       @include mut.with-font($font-weight: 300, $font-size: 13px);
       line-height: f.pxToEm(18px);
     }
@@ -50,7 +50,7 @@
 }
 
 .interestingFactsSliderContainer .sliderClass {
-     height: 100%;
+  height: 100%;
 }
 
 .interestingFactsSliderContainer .slick-list {
@@ -61,16 +61,50 @@
   @include mut.rem-padded(7px, 20px, 0px, 20px);
   @include vnd.vendored(transition, '.5s ease');
   cursor: pointer;
-
+  
   color: c.$dark-red-color;
   @include mut.with-font(ft.$roboto-font, 300, 13px, normal);
-
+  
   &:hover {
     color: c.$accented-red-color;
   }
   
-  
 }
+
+@media screen
+   and (max-width: 768px){
+     //and (max-width: 1024px)
+ .interestingFactSlide {
+   @include mut.sized(233px, 250px);
+   @include mut.full-rounded(20px);
+
+     .slideImage {
+       @include mut.sized(100%, 150px);//200px
+       @include mut.rounded(20px, 20px);
+      img{
+        @include mut.sized(100%, 95%)
+      }
+     }
+     .slideText {
+       @include mut.sized(100%, 144px);
+       @include mut.rem-padded(1px, 2px, 5px, 0px);
+       .heading {
+         @include mut.with-font($font-weight: 500, $font-size: 14px);
+         line-height: f.pxToEm(15px);
+       }
+       .mainText {
+        //  @include mut.rem-padded(0, 20px, 0px, 20px);
+         @include mut.with-font($font-weight: 300, $font-size: 12px);
+         line-height: f.pxToEm(14px);
+       }
+     } 
+
+     .readMoreParagraph {
+       @include mut.rem-padded(4px, 20px, 0px, 20px);
+       @include mut.with-font(ft.$roboto-font, 300, 10px, normal);        
+     }
+ } 
+ }
 @media screen and (max-width: 480px) { 
 
   .interestingFactSlide {
@@ -79,6 +113,8 @@
 
       .slideImage {
         @include mut.sized(100%, 188px);
+        @include mut.rounded(20px, 20px);
+
       }
       .slideText {
         @include mut.sized(100%, 125px);
@@ -98,4 +134,5 @@
       }
   }
  }
+
  
