--- a/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
@@ -11,7 +11,7 @@ $bookImg: "@assets/images/sources/Books_stretched.png";
 $articlesImg: "@assets/images/sources/Articles.png";
 
 .relatedFiguresModal {
-  @include mut.sized(1000px, 698px);
+  @include mut.sizedImportant(1000px, 698px);
 
   &.ant-modal {
     .ant-modal-content {
