--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
@@ -109,6 +109,42 @@ and (max-width: 768px){
 .slick-center .interestingFactSlide {
     transform: scale(1.5);
 }
+.heightContainer {
+    padding-top: pxToRem(23px);
+}
+
+.slick-center .interestingFactSlide {
+    transform: scale(1.5);
+}
+.singleSlideContainer{
+    
+    padding-top:7.5%;
+
+    .interestingFactSlide{
+        @include mut.sized(500px, 450px);
+        @include mut.full-rounded(20px);
+
+        .slideImage {
+            @include mut.sized($height: 65%);
+
+            img {
+                @include mut.sized($width: 100%, $height: 100%);
+            }
+        }
+        .slideText{
+            @include mut.sized($height: 40%);
+
+            .heading{
+                font-size:20px;
+            }
+
+            .mainText{
+                font-size: 12px;
+                line-height: pxToRem(17px);
+            }
+        }
+    }
+}
 }
 
 @media screen and (max-width: 480px){
