--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -14,7 +14,7 @@ $darkish-gray-color: #A3A3A3 !important;
 $normal-gray-color: #7F7F7F !important;
 $normal-darker-gray-color: #7E7E7E !important;
 
-$dark-red-color: #8D1F16 !important;
+$dark-red-color: #891F16 !important;
 $accented-red-color: #E04031 !important;
 
 $slider-base-dot-color: #D9D9D9 !important;
